<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#faebd7"
    tools:context="com.veggkart.android.activity.ProfileActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"

        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_profile_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_full_name"
                android:inputType="textPersonName|textCapWords"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_email"
                android:inputType="textVisiblePassword"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_profile_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_mobile"
                android:inputType="phone"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_profile_address"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:gravity="start"
                android:hint="@string/label_address"
                android:inputType="textPostalAddress|textMultiLine"
                android:lines="3"
                android:singleLine="false" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_profile_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_city"
                android:inputType="textPersonName|textCapWords"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_profile_zip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_zip"
                android:inputType="number"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_state"
                android:paddingBottom="10dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:paddingTop="10dp"
                android:textSize="20sp" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner_profile_state"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/india_states"

                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:prompt="@string/hint_password"
                android:spinnerMode="dropdown" />
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="10dp"></android.support.v4.widget.Space>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_profile_updateProfile"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="sans-serif"
            android:text="@string/button_update_details"
            android:textAllCaps="false"
            android:textSize="25sp" />

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>
